force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <description>Soccer match</description>
    <label>Match</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>