force-app/main/default/objects/Match__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <formula>ROUND(StartDateTime__c -  NOW(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysLeft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>