force-app/main/default/objects/Match__c/fields/PreviousMatchBetweenTeamsDatetime__c.field-meta.xml
<CustomField>
    <fullName>PreviousMatchBetweenTeamsDatetime__c</fullName>
    <label>PreviousMatchBetweenTeamsDatetime</label>
    <type>DateTime</type>
</CustomField>