force-app/main/default/objects/Match__c/fields/Visitors__c.field-meta.xml
<CustomField>
    <fullName>Visitors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitors</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Team must have 11 active players.</errorMessage>
        <filterItems>
            <field>Team__c.TotalActivePlayers__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Visitors)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>