force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF( LEFT( Score__c , 1)  &gt;  RIGHT( Score__c , 1)  ,  HomeTeam__r.Name  ,
IF( LEFT( Score__c , 1)  &lt;  RIGHT( Score__c , 1)  ,  Visitors__r.Name ,
IF( LEFT( Score__c , 1)  =  RIGHT( Score__c , 1)  ,  &apos;Draw&apos;  ,
NULL)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>