force-app/main/default/objects/Match__c/validationRules/Score_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_validation</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Score__c , &apos;-&apos;)</errorConditionFormula>
    <errorMessage>Score cannot be negative numbers!</errorMessage>
</ValidationRule>