force-app/main/default/objects/Match__c/validationRules/StartDateTime_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateTime_validation</fullName>
    <active>true</active>
    <errorConditionFormula>StartDateTime__c &lt;  NOW()</errorConditionFormula>
    <errorMessage>Match StartDateTime cannot be in past for new Matches!</errorMessage>
</ValidationRule>